<resources>
    <string name="app_name">GrowthLog</string>
    <string name="old_Password">旧密码:</string>
    <string name="old_Password_Hint">请输入您之前的密码</string>
    <string name="new_Password">新密码:</string>
    <string name="new_Password_Hint">请输入新密码</string>
    <string name="confirm_Password">确认密码:</string>
    <string name="confirm_Password_Hint">请再输入一遍新密码</string>
    <string name="change_Password">修改</string>
    <string name="groupName">群名：</string>
    <string name="groupNameHint">请输入您希望创建的群名：</string>
</resources>
